Fix IPv6 parsing in _g_uri_parse_authority, add _g_uri_from_authority

Fixes connections to IPv6 address literals.

https://bugzilla.gnome.org/show_bug.cgi?id=629259